[package]
name = "tower-lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
http = "0.2.4"
hyper = "0.14"
lambda_runtime = "0.4.0"
lambda_http = "0.4.0"
tower-service = "0.3.1"

[dev-dependencies]
axum = "0.1.3"
tokio = { version = "1.8", features = ["full"] }